--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "axios": "^1.7.7",
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
