--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.0.1",
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,7 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
     "postcss": "^8.4.47",
-    "prisma": "^5.19.1",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.12",
     "typescript": "^5"
   }
