--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.1",
-    "next": "^15.0.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^15.1.4",
+    "next-auth": "^5.0.0-beta.25",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
