--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "vercel-build": "npm install --legacy-peer-deps && next build"
+    "postinstall": "prisma generate"
+    
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -22,7 +22,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "next": "^15.1.4",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.3.0",
