--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss": "^8.4.47",
     "prisma": "^6.2.1",
     "tailwindcss": "^3.4.12",
+    "tw-colors": "^3.3.2",
     "typescript": "^5.7.3"
   }
 }
