--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "seed": "ts-node prisma/seed.ts"
   },
+    "prisma": {
+      "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -56,7 +60,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.17.12",
+    "@types/node": "^20.17.24",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
@@ -65,7 +69,8 @@
     "postcss": "^8.4.47",
     "prisma": "^6.2.1",
     "tailwindcss": "^3.4.12",
+    "ts-node": "^10.9.2",
     "tw-colors": "^3.3.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
