--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@radix-ui/react-use-escape-keydown": "^1.0.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.17.24",
