--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.469.0",
     "next": "^15.1.4",
     "next-auth": "^4.24.11",
