--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "^15.1.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
